--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    test
+    <%- include("../partials/header.ejs") %>
     <%- body %>
-    test
 </body>
 </html>
